--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,7 @@
 [project]
-name = "orca"
+name = "pystac-top-contributors"
 version = "0.1.0"
-description = "Add your description here"
+description = "Top contributors to PySTAC"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = [
-    "click>=8.1.8",
-    "pydantic>=2.10.6",
-    "pygithub>=2.5.0",
-]
+dependencies = ["click>=8.1.8", "pydantic>=2.10.6", "pygithub>=2.5.0"]
